Instantiate a handler in the proper way.